--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- reset css -->
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <!-- style -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Bài 90: Figma to HTML</title>
   </head>
-  <body></body>
+  <body>
+    <h1>figma to css</h1>
+    <h2>demo</h2>
+  </body>
 </html>
