p5 làm phần popular p1

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     </header>
     <!-- main -->
     <main>
+      <!-- hero -->
       <div class="hero">
         <div class="main-content">
           <div class="body">
@@ -117,6 +118,30 @@
               <p class="desc stats">
                 <strong>50K</strong> Students <strong>70+</strong> Courses
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- popular -->
+      <div class="popular">
+        <div class="main-content">
+          <div class="popular-top">
+            <!-- popular left -->
+            <div class="info">
+              <h2 class="heading-lv2">Our popular courses</h2>
+              <p class="desc">
+                Build new skills with new trendy courses and shine for the next
+                future career.
+              </p>
+            </div>
+            <!-- popular right -->
+            <div class="control">
+              <div class="button control-btn">
+                <img src="./assets/icon/prev1.svg" alt="" />
+              </div>
+              <div class="button control-btn">
+                <img src="./assets/icon/prev.svg" alt="" />
+              </div>
             </div>
           </div>
         </div>
