p6 làm phần popular p2

--- a/index.html
+++ b/index.html
@@ -135,12 +135,89 @@
               </p>
             </div>
             <!-- popular right -->
-            <div class="control">
-              <div class="button control-btn">
-                <img src="./assets/icon/prev1.svg" alt="" />
+            <div class="controls">
+              <button class="control-btn">
+                <img src="./assets/icon/Icon inactive.svg" alt="" />
+              </button>
+              <button class="control-btn">
+                <img src="./assets/icon/Icon active.svg" alt="" />
+              </button>
+            </div>
+          </div>
+          <d class="course-list">
+            <!-- course 1 -->
+            <div class="course-item">
+              <a href="#!"
+                ><img src="./assets/img/course1.jpg" alt="" class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title"><a href="#!">Basic web design</a></h3>
+                  <div class="rating">
+                    <img src="./assets/icon/star.svg" alt="" class="start" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book Now</button>
+                </div>
               </div>
-              <div class="button control-btn">
-                <img src="./assets/icon/prev.svg" alt="" />
+            </div>
+            <!-- course 2 -->
+            <div class="course-item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/course2.jpg"
+                  alt="UI/UX design"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title"><a href="#!">UI/UX design</a></h3>
+                  <div class="rating">
+                    <img src="./assets/icon/star.svg" alt="" class="start" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book Now</button>
+                </div>
+              </div>
+            </div>
+            <!-- course 3 -->
+            <div class="course-item">
+              <a href="#!"
+                ><img
+                  src="./assets/img/course3.jpg"
+                  alt="Web App design"
+                  class="thumb"
+              /></a>
+              <div class="info">
+                <div class="head">
+                  <h3 class="title"><a href="#!">Web App design</a></h3>
+                  <div class="rating">
+                    <img src="./assets/icon/star.svg" alt="" class="start" />
+                    <span class="value">4.5</span>
+                  </div>
+                </div>
+                <p class="desc">
+                  Get the best course, gain knowledge and shine for your future
+                  career.
+                </p>
+                <div class="foot">
+                  <span class="price">$120.75</span>
+                  <button class="btn btn-book">Book Now</button>
+                </div>
               </div>
             </div>
           </div>
