--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="title"><a href="#!">Basic web design</a></h3>
+                  <h3 class="title"><a class="line-clamp break-all" href="#!">Basic web design</a></h3>
                   <div class="rating">
                     <img src="./assets/icon/star.svg" alt="" class="start" />
                     <span class="value">4.5</span>
                   </div>
                 </div>
-                <p class="desc">
+                <p class="desc line-clamp line-2 break-all">
                   Get the best course, gain knowledge and shine for your future
                   career.
                 </p>
@@ -178,13 +178,13 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="title"><a href="#!">UI/UX design</a></h3>
+                  <h3 class="title"><a class="line-clamp break-all" href="#!">UI/UX design</a></h3>
                   <div class="rating">
                     <img src="./assets/icon/star.svg" alt="" class="start" />
                     <span class="value">4.5</span>
                   </div>
                 </div>
-                <p class="desc">
+                <p class="desc line-clamp line-2 break-all">
                   Get the best course, gain knowledge and shine for your future
                   career.
                 </p>
@@ -204,13 +204,13 @@
               /></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="title"><a href="#!">Web App design</a></h3>
+                  <h3 class="title"><a class="line-clamp break-all" href="#!">Web App design</a></h3>
                   <div class="rating">
                     <img src="./assets/icon/star.svg" alt="" class="start" />
                     <span class="value">4.5</span>
                   </div>
                 </div>
-                <p class="desc">
+                <p class="desc line-clamp line-2 break-all">
                   Get the best course, gain knowledge and shine for your future
                   career.
                 </p>
