--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 <div class="dots">
                   <span class="dot"></span>
                   <span class="dot "></span>
-                  <span class="dot active"></span>
+                  <span class="dot "></span>
                 </div>
               </div>
               <!-- khối bên phải -->
@@ -290,6 +290,23 @@
           </div>
         </div>
        </div>
+       <!-- features -->
+        <div class="fetures">
+          <div class="main-content">
+            <div class="body">
+              <div class="images">
+                <img class="lower" src="./assets/img/learn1.jpg" alt="Learner outcomes through our awesome platform">
+                <img src="./assets/img/learn2.jpg" alt="Learner outcomes through our awesome platform">
+              </div>
+              <div class="content">
+                <h2 class="heading-lv2">Learner outcomes through our awesome platform</h2>
+                <p class="desc">87% of people learning for professional development report career benefits like getting a promotion, a raise, or starting a new career.</p>
+                <p class="desc">Lesson Impact Report (2022)</p>
+                <a href="#!" class="btn cta-btn">Sign Up</a>
+              </div>
+            </div>
+          </div>
+        </div>
     </main>
   </body>
 </html>
