--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
           </div>
         </div>
        </div>
-       <!-- features -->
+       <!-- features 1 -->
         <div class="fetures">
           <div class="main-content">
             <div class="body">
@@ -303,6 +303,21 @@
                 <p class="desc">87% of people learning for professional development report career benefits like getting a promotion, a raise, or starting a new career.</p>
                 <p class="desc">Lesson Impact Report (2022)</p>
                 <a href="#!" class="btn cta-btn">Sign Up</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- features 2 -->
+        <div class="fetures fetures-2nd">
+          <div class="main-content">
+            <div class="body">
+              <div class="images">
+                <img src="./assets/img/learn2.jpg" alt="Learner outcomes through our awesome platform">
+              </div>
+              <div class="content">
+                <h2 class="heading-lv2">Take the next step toward your personal and professional goals with Lesson.</h2>
+                <p class="desc">Take the next step toward. Join now to receive personalized  and more recommendations from the full Coursera catalog.</p>   
+                <a href="#!" class="btn cta-btn">Join Now</a>
               </div>
             </div>
           </div>
