--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         </div>
        </div>
        <!-- features 1 -->
-        <div class="fetures">
+        <div class="features">
           <div class="main-content">
             <div class="body">
               <div class="images">
@@ -308,7 +308,7 @@
           </div>
         </div>
         <!-- features 2 -->
-        <div class="fetures fetures-2nd">
+        <div class="features features-2nd">
           <div class="main-content">
             <div class="body">
               <div class="images">
